--- a/life.css
+++ b/life.css
@@ -1,22 +1,67 @@
 body {
   padding: 20px;
   background-color: #444;
+
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+
 #gridContainer {
   padding-bottom: 10px;
 }
+
 table {
   background-color: gray;
   border-spacing: 1px;
 }
+
+
 td {
   border: 1px solid rgb(90, 90, 90);
   width: 20px;
   height: 20px;
+  user-select: none;
 }
+
+
 td.dead {
   background-color: transparent;
 }
+
+
 td.live {
   background-color: white;
+}
+
+td:hover {
+  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.3);
+  cursor: pointer;
+}
+
+
+button {
+  margin-top: 10px;
+  margin-right: 5px;
+
+  background-color: #333;
+  color: #eee;
+  border: 1px solid #666;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #555;
+}
+
+
+button:first-of-type {
+  margin-left: 0;
+}
+
+button:last-of-type {
+  margin-right: 0;
 }
